# eventfd

./: .travis.yml  eventfd.cabal
System/Posix/: Eventfd.hs
System/Posix/Eventfd/FFI/: Eventfd.hs  Eventfd.hsc
examples/: sem2.hs  sem3.hs  sym.hs  test.hs
test/: Test.hs
