name:                eventfd
version:             0.1.0.0
synopsis:            eventfd support
description:         Eventfd support
license:             MIT
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
copyright:           2013, Alexander Vershilov
category:            System
build-type:          Simple
cabal-version:       >=1.8
stability:           experimental

library
  exposed-modules:     System.Posix.Eventfd, System.Posix.Eventfd.FFI.Eventfd
  build-depends:       base >=4.0 && <5.0, unix >=2.5 && <2.7, binary ==0.5.*
  build-tools:         hsc2hs
  ghc-options: -Wall

test-suite test
  hs-source-dirs: test
  main-is: Test.hs 
  type: exitcode-stdio-1.0

  ghc-options:         -Wall -threaded
  build-depends:       base, eventfd, hspec, HUnit, async
